--- a/part7/bloglist-react-router/client/src/index.css
+++ b/part7/bloglist-react-router/client/src/index.css
@@ -1,26 +1,3 @@
-.success {
-    color: green;
-    background: lightgrey;
-    font-size: 20px;
-    border-style: solid;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-.error {
-    color: red;
-    background: lightgrey;
-    font-size: 20px;
-    border-style: solid;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-.blog {
-    padding: 5px;
-    border-style: solid;
-    border-width: 1px;
-    margin-bottom: 5px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
